<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">References Manager</string>
    <string name="documents">Documents</string>
    <string name="add_document">Add Document</string>
    <string name="document_name">Document Name</string>
    <string name="document_name_hint">Enter document name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="shared_urls">Shared URLs</string>
    <string name="no_documents">No documents yet. Create one to get started!</string>
    <string name="no_references">No references in this document</string>
    <string name="url_added_success">URL added successfully</string>
    <string name="document_created">Document created successfully</string>
    <string name="document_deleted">Document deleted</string>
    <string name="enter_document_name">Please enter a document name</string>
    <string name="select_document">Select a document to save this reference</string>
    <string name="select_document_to_add">Select a document to add this reference to:</string>
    <string name="open_url">Open URL</string>
    <string name="copy_url">Copy URL</string>
    <string name="delete_reference">Delete Reference</string>
    <string name="delete_reference_confirm">Are you sure you want to delete this reference?</string>
    <string name="create_document">Create New Document</string>
    <string name="delete_document">Delete Document</string>
    <string name="delete_document_confirm">Are you sure you want to delete &quot;%1$s&quot; and all its references?</string>
    <string name="add_reference">Add Reference</string>
    <string name="url_hint">Enter URL</string>
    <string name="title_hint">Enter title (optional)</string>
    <string name="shared_url">Shared URL</string>
    <string name="no_url_found">No URL found in the shared content</string>
    <string name="error_opening_url">Unable to open URL</string>
</resources>
